# thesis_basketball_ros_ws

unity_basketdrone/: CMakeLists.txt  package.xml
unity_basketdrone/config/: plotjuggler.xml  plotjuggler2.xml  sim.rviz
unity_basketdrone/launch/: centroid_follow.launch  simulation.launch  yolo_ros.launch
unity_basketdrone/script/: centroid_calculator.py  drone_controller.py  drone_controller_new.py
unity_basketdrone/src/: unity_camera.cpp
unity_basketdrone/urdf/: quadrotor.urdf
