<?xml version="1.0"?>
<package format="2">
  <name>unity_basketdrone</name>
  <version>0.0.0</version>
  <description>The unity_basketdrone package</description>

  <maintainer email="root@todo.todo">root</maintainer>

  <license>TODO</license>



  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend> 
  <depend>rospy</depend> 

  <depend>sensor_msgs</depend> 
  <depend>geometry_msgs</depend> 
  <depend>message_filters</depend> 
  <depend>tf2</depend> 
  <depend>tf2_ros</depend> 
  <depend>std_msgs</depend> 
  <depend>compress_image</depend> 
  <depend>image_geometry</depend> 
  <depend>rosparam_shortcuts</depend> 
  <depend>vision_msgs</depend>

  <export>

  </export>
</package>
